--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Great Idea - Responsive I</title>
 
   <link href="https://fonts.googleapis.com/css?family=Bangers|Titillium+Web" rel="stylesheet">
@@ -12,5 +13,84 @@
 
 <body>
 <!-- Use past code you created here for Great Idea Web Page or past solution for Great Idea Web Page HTML here! -->
+
+<header>
+  <nav>
+     <a href="services.html"> Services </a>
+     <a href="#"> Product  </a>
+     <a href="#"> Vision   </a>
+     <a href="#"> Features </a>
+     <a href="#"> About    </a>
+     <a href="contact.html"> Contact  </a>
+  
+   <a href="index.html"><img class="logo" src="img/logo.png" alt="Great Idea! Company logo.">
+   </a>
+ </nav>
+</header>
+<section>
+<div class="cover">
+  <div class="pair">  
+       <div class="iod"><h1>Innovation<br>
+       On<br>
+       Demand
+     </h1></div>
+
+     <button class="button">Get Started</button>
+  </div>
+  <div class="circle" >
+   <img src="img/header-img.png" alt="Image of a code snippet.">
+  </div>
+</div>
+</section>
+
+<br><hr><br>
+
+<section class="top">
+  <div>
+  <h4>Features</h4>
+    <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+  </div>
+  <div>
+  <h4>About</h4>
+    <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+  </div>
+</section>
+
+<img class="middle-img" src="img/mid-page-accent.jpg" alt="Image of code snippets across the screen">
+
+<section class="bottom">
+  <div>
+  <h4>Services</h4>
+    <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+  </div>
+  <div>
+  <h4>Product</h4>
+    <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+  </div>
+  <div>
+  <h4>Vision</h4>
+    <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+  </div>
+</section>
+
+<br><hr><br>
+
+<footer>
+ <div class="contact">
+ <h4>Contact</h4>
+ <div class="info"> 
+   123 Way 456 Street<br>
+   Somewhere, USA<br>
+   
+   <p>1 (888) 888-8888</p>
+   
+   </div>
+</div>
+
+<p>sales@greatidea.io</p><br>
+
+<p class="copyright">Copyright Great Idea! 2018</p>
+</footer>
+</div>
 </body>
 </html>
