--- a/index.html
+++ b/index.html
@@ -16,31 +16,31 @@
 
 <header>
   <nav>
-     <a href="services.html"> Services </a>
-     <a href="#"> Product  </a>
-     <a href="#"> Vision   </a>
-     <a href="#"> Features </a>
-     <a href="#"> About    </a>
-     <a href="contact.html"> Contact  </a>
-  
-   <a href="index.html"><img class="logo" src="img/logo.png" alt="Great Idea! Company logo.">
-   </a>
- </nav>
+      <a href="services.html"> Services </a>
+      <a href="#"> Product  </a>
+      <a href="#"> Vision   </a>
+      <a href="#"> Features </a>
+      <a href="#"> About    </a>
+      <a href="contact.html"> Contact  </a>
+  </nav>
+  <div>
+      <a href="index.html"><img class="logo" src="img/logo.png" alt="Great Idea! Company logo."></a>
+  </div>
 </header>
 <section>
-<div class="cover">
-  <div class="pair">  
-       <div class="iod"><h1>Innovation<br>
-       On<br>
-       Demand
-     </h1></div>
+  <div class="cover">
+    <div class="pair">  
+      <div class="iod"><h1>Innovation<br>
+        On<br>
+        Demand
+      </h1></div>
 
-     <button class="button">Get Started</button>
+      <button class="button">Get Started</button>
+    </div>
+    <div class="circle" >
+      <img src="img/header-img.png" alt="Image of a code snippet.">
+    </div>
   </div>
-  <div class="circle" >
-   <img src="img/header-img.png" alt="Image of a code snippet.">
-  </div>
-</div>
 </section>
 
 <br><hr><br>
@@ -76,18 +76,18 @@
 <br><hr><br>
 
 <footer>
- <div class="contact">
- <h4>Contact</h4>
- <div class="info"> 
-   123 Way 456 Street<br>
-   Somewhere, USA<br>
+  <div class="contact">
+  <h4>Contact</h4>
+  <div class="info"> 
+    <p>123 Way 456 Street<br>
+       Somewhere, USA</p>
    
-   <p>1 (888) 888-8888</p>
+    <p>1 (888) 888-8888</p>
    
-   </div>
+    <p>sales@greatidea.io</p>
+  </div>
+   
 </div>
-
-<p>sales@greatidea.io</p><br>
 
 <p class="copyright">Copyright Great Idea! 2018</p>
 </footer>
