--- a/index.html
+++ b/index.html
@@ -28,12 +28,13 @@
   </div>
 </header>
 <section>
+  <!--"cover" covers IOD, Button, & Circle-->
   <div class="cover">
     <div class="pair">  
       <div class="iod"><h1>Innovation<br>
         On<br>
-        Demand
-      </h1></div>
+        Demand</h1>
+      </div>
 
       <button class="button">Get Started</button>
     </div>
